# Movie-loader

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  media.ts  nativeViewer.ts  openExternalUrl.ts  openProviderWindow.ts  sourceInference.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: builtinProviders.ts  client.ts
src/components/: DownloadsView.tsx  LibraryViews.tsx  SearchView.tsx  SettingsView.tsx  Sidebar.tsx  SourcesView.tsx  ViewerView.tsx
src/data/: samples.ts
